add Native LLM Integration / Native integration with large language models